--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rest Api - Alphabot</title>
+    <title>Rest Api - Rrsszxx</title>
     <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="vendors/flag-icon-css/css/flag-icon.min.css">
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7Wk6KnE7aJHUHjpp_wBoDfkeSIOQfSGMmxg&usqp=CAU"><link rel="stylesheet" href="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7Wk6KnE7aJHUHjpp_wBoDfkeSIOQfSGMmxg&usqp=CAU"><link rel="stylesheet" href="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <script src="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.js"></script>
-   <meta name="description" content="Alphabot - API">
+   <meta name="description" content="Rrsszxxbot - API">
    <meta property="og:image" content="https://i.ibb.co/gjbZGxy/IMG-20210521-WA0673.png">
    <meta property="og:site_name" content="EKA PI">
    <meta name="keywords" content="REST API">
-   <meta name="author" content="Alpha Gans">
+   <meta name="author" content="Rrsszxx Gans">
   </head>
   <body>
   <body id="page-top" onload="getvisitor();">
@@ -41,7 +41,7 @@
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal">Zeeone Ofc</h5>
+                  <h5 class="mb-0 font-weight-normal">Rrsszxx Ofc</h5>
                   <span>Masih Pemula Om :(</span>
                 </div>
               </div>
@@ -275,7 +275,7 @@
           <li class="nav-item"> <a class="nav-link" href="api/nsfw/yuri?&apikey=Alphabot">Yuri</a></li>          
           </ul>
           </div>
-          </li>          
+          </li>>           
           <li class="nav-item menu-items">
           <a class="nav-link" data-toggle="collapse" href="#ui-islamic" aria-expanded="false" aria-controls="ui-islamic">
           <span class="menu-icon">
@@ -346,7 +346,7 @@
           <span class="nav-link">Contact Me</span>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://github.com/zeeoneofc">
+            <a class="nav-link" href="https://github.com/Rrsszxx98">
               <span class="menu-icon">
                 <i class="mdi mdi-github-circle"></i>
               </span>
@@ -354,7 +354,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://wa.me/62887435047326">
+            <a class="nav-link" href="https://wa.me/62895328255152">
               <span class="menu-icon">
                 <i class="mdi mdi-whatsapp"></i>
               </span>
@@ -362,7 +362,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://saweria.co/zeeoneofc">
+            <a class="nav-link" href="https://saweria.co/Rrsszxx">
               <span class="menu-icon">
                 <i class="mdi mdi-saweria"></i>
               </span>
@@ -370,7 +370,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://instagram.com/zeeoneofc">
+            <a class="nav-link" href="https://instagram.com/moi_Cans">
               <span class="menu-icon">
                 <i class="mdi mdi-instagram"></i>
               </span>
@@ -392,7 +392,7 @@
             <ul class="navbar-nav w-100">
               <li class="nav-item w-100">
                 <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex ">
-                  <input type="text" class="form-control" placeholder="Alphabot APIs">
+                  <input type="text" class="form-control" placeholder="Rrsszxxbot APIs">
                 </form>
               </li>
             </ul>
@@ -599,8 +599,8 @@
               <img src="https://i.top4top.io/p_1970vakjn1.jpg" alt="Ojan Ganz" class="logo img-fluid rounded mx-auto d-block mb-4"/>
               <h6 class="m-0 font-weight-bold text-primary">Information</h6>
               <h6><br>
-              Rest Api Ini Free, Silahakan di pake dengan bijak. <br><br>Apikey Nya? <font color="red">Alphabot</font>
-              <br> Jika menemukan bug gk usah lapor <a href="https://wa.me/62887435047326"> Owner</a></font>
+              Rest Api Ini Free, Silahakan di pake dengan bijak. <br><br>Apikey Nya? <font color="red">Rrsszxxbot</font>
+              <br> Jika menemukan bug gk usah lapor <a href="https://wa.me/62895328255152"> Owner</a></font>
               </div>
               <div class="col-md-12 grid-margin stretch-card">
               <div class="card">
@@ -628,7 +628,7 @@
     </div>
     <script>
       swal({
-        title: 'Welcome To Rest Api Alphabot',
+        title: 'Welcome To Rest Api Rrsszxx',
         text: 'Klo ada eror fix sendiri',
         imageUrl: 'https://i.ibb.co/7pmfhHN/IMG-20210526-WA0030.jpg',
         imageWidth: 200,
